# magnet-microdrop-plugin-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  microdrop_plugin.toml  pyproject.toml
.github/workflows/: publish.yml
demos/: magnetic_stage.py  peripheral_device_monitering_aps_dramatiq_scheduled.py
peripheral_controller/: consts.py  datamodels.py  peripheral_controller_base.py  plugin.py  preferences.py
peripheral_controller/interfaces/: i_peripheral_control_mixin_service.py  i_peripheral_controller_base.py
peripheral_controller/services/: peripheral_monitor_mixin_service.py  zstage_state_setter_service.py
peripheral_controller/tests/: test_models.py  test_protocol_set_magnet.py
peripheral_protocol_controls/: consts.py  plugin.py
peripheral_protocol_controls/demos/: magnet_responder.py  run_widget_magnet_demo.py
peripheral_protocol_controls/protocol_columns/: magnet_column.py
peripheral_protocol_controls/tests/: conftest.py  test_demo_responder.py  test_magnet_column.py  test_plugin_shell.py
peripheral_protocol_controls/tests/tests_with_redis_server_need/: conftest.py  test_magnet_protocol_round_trip.py
peripherals_ui/: consts.py  dock_pane.py  menus.py  message_handler.py  model.py  plugin.py  preferences.py
peripherals_ui/z_stage/: view.py  view_model.py
